test/errors/template.003.tmpl
<div class="block">
    <TMPL_VAR b_text
        num=$b_num>

    <TMPL_VAR /list/{b_id}/name>

    <TMPL_VAR '/static/pic.png'>

    <TMPL_VAR b_text_ok>

    <TMPL_VAR b_text
        num=b_num
</div>
